--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,12 +15,14 @@ pipeline {
         stage('Select Day') {
             steps {
                 script {
-                    env.day = input(
+                    def inputValue = input(
                         message: "Enter a valid day for ${params.MONTH}",
                         parameters: [
                             string(name: 'DAY', description: 'Enter the day (1-31)')
                         ]
-                    ) as int
+                    )
+    
+                    env.day = inputValue.toInteger()
         
                     def maxDay
         
