--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,16 +19,16 @@ pipeline {
 
                         case 'January':
                             booleanGoals = [ 
-                                ($class: 'BooleanParameterDefinition', name: "BUY_DIARY", defaultValue: false, description: "Have you bought your diary?"),
-                                ($class: 'BooleanParameterDefinition', name: "QUOTE", defaultValue: false, description: "Have you written a quote that matches your mood?")
+                                booleanParam(name: "BUY_DIARY", defaultValue: false, description: "Have you bought your diary?"),
+                                booleanParam(name: "QUOTE", defaultValue: false, description: "Have you written a quote that matches your mood?")
                             ]
                             break
 
                         case 'February':
                             booleanGoals = [ 
-                                ($class: 'BooleanParameterDefinition', name: "DECORATION_THEME", defaultValue: false, description: "Have you chosen your theme?"),
-                                ($class: 'BooleanParameterDefinition', name: "DECORATION_PURCHASE", defaultValue: false, description: "Have you bought the decoration?"),
-                                ($class: 'BooleanParameterDefinition', name: "DECORATION_HOUSE", defaultValue: false, description: "Have you redecorate your house?")
+                                booleanParam(name: "DECORATION_THEME", defaultValue: false, description: "Have you chosen your theme?"),
+                                booleanParam(name: "DECORATION_PURCHASE", defaultValue: false, description: "Have you bought the decoration?"),
+                                booleanParam(name: "DECORATION_HOUSE", defaultValue: false, description: "Have you redecorate your house?")
                             ]
                             break
                       }
@@ -58,7 +58,7 @@ pipeline {
 
                         case 'January':
 
-                            if (params.BUY_DIARY?.toBoolean()) {
+                            if (params.BUY_DIARY?) {
                                 if (day <= 5) {
                                     echo "Congratulations! You've already bought your diary and you're off to a great start!"
                                 } else {
@@ -74,7 +74,7 @@ pipeline {
                                 }
                             }
 
-                            if (params.QUOTE?.toBoolean()) {
+                            if (params.QUOTE?) {
                                 echo "Great job writing a quote that reflects your mood today! It's a beautiful way to connect with your emotions and express yourself."
                             } else {
                                 echo "Remember to write a quote that matches your mood today! It's a small yet meaningful step to bring clarity to your thoughts and emotions."
@@ -83,7 +83,7 @@ pipeline {
                             break
 
                         case 'February':
-                            if (params.DECORATION_THEME?.toBoolean()) {
+                            if (params.DECORATION_THEME?) {
                                 if (day <= 5) {
                                     echo "Congratulations on choosing your decoration theme early! You're on the right track!"
                                 } else {
@@ -99,7 +99,7 @@ pipeline {
                                 }
                             }
                       
-                            if (params.DECORATION_PURCHASE?.toBoolean()) {
+                            if (params.DECORATION_PURCHASE?) {
                                 if (day <= 15) {
                                     echo "Well done buying your decorations! You're making great progress!"
                                 } else {
@@ -115,7 +115,7 @@ pipeline {
                                 }
                             }
                         
-                            if (params.DECORATION_HOUSE?.toBoolean()) {
+                            if (params.DECORATION_HOUSE?) {
                                 if (day <= 25) {
                                     echo "Amazing! Your home is looking fantastic after redecorating—great work!"
                                 } else {
