--- a/jenkinsfile
+++ b/jenkinsfile
@@ -36,6 +36,7 @@ pipeline {
                     if (booleanGoals) {
                         currentBuild.description = "Reconfiguring parameters for ${params.MONTH}"
                         input message: "Fill out the goals for ${params.MONTH}", parameters: booleanGoals
+                        echo(booleanGoals)
                     }
                 }
             }
