--- a/jenkinsfile
+++ b/jenkinsfile
@@ -35,7 +35,8 @@ pipeline {
     
                     if (booleanGoals) {
                         currentBuild.description = "Reconfiguring parameters for ${params.MONTH}"
-                        input message: "Fill out the goals for ${params.MONTH}", parameters: booleanGoals
+                        def updatedParams = input message: "Fill out the goals for ${params.MONTH}", parameters: booleanGoals
+                        params = params + updatedParams
                     }
                 }
             }
@@ -58,7 +59,6 @@ pipeline {
 
                         case 'January':
 
-                            echo "${params.BUY_DIARY}"
                             if (params.BUY_DIARY?.toBoolean()) {
                                 if (day <= 5) {
                                     echo "Congratulations! You've already bought your diary and you're off to a great start!"
